# chuffed

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  README.md  chuffed-config.cmake.in  chuffed.msc.in
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml  post-clang-tidy.yml
chuffed/branching/: branching.cpp  branching.h  impact.cpp  impact.h  warm-start.h
chuffed/core/: assume.h  conflict.cpp  engine.cpp  engine.h  init.cpp  options.cpp  options.h  propagator.h  sat-types.h  sat.cpp  sat.h  stats.cpp
chuffed/examples/: bibd.cpp  blackhole.cpp  concert_hall.cpp  concert_hall_sym.cpp  cross.cpp  fdpent.cpp  golomb.cpp  graceful_graph.cpp  graph_colouring.cpp  graph_colouring_sym.cpp  graph_colouring_sym2.cpp  grid_colouring.cpp  latin_square.cpp  magic_square.cpp  mosp.cpp  nn_queens.cpp  non.cpp  nurse.cpp  photo.cpp  queens.cpp  rcpsp.cpp  shift.cpp  steel_mill.cpp  template.cpp  wreg_shift.cpp
chuffed/flatzinc/: Makefile  ast.h  flatzinc.cpp  flatzinc.h  fzn-chuffed.cpp  fzn_chuffed.cpp  lexer.lxx  lexer.yy.cpp  parser.tab.cpp  parser.tab.h  parser.yxx  registry.cpp
chuffed/flatzinc/generated_parser/: lexer.yy.cpp  parser.tab.cpp  parser.tab.h
chuffed/flatzinc/mznlib/: chuffed.mzn  cumulative.mzn  edit_distance.mzn  fzn_all_different_int.mzn  fzn_arg_max_bool.mzn  fzn_bounded_dpath_int.mzn  fzn_circuit.mzn  fzn_connected.mzn  fzn_count_neq.mzn  fzn_count_neq_par.mzn  fzn_cumulative.mzn  fzn_dag.mzn  fzn_disjunctive.mzn  fzn_distribute.mzn  fzn_dpath_int.mzn  fzn_dtree_int.mzn  fzn_seq_precede_chain_int.mzn  fzn_steiner.mzn  fzn_subcircuit.mzn  fzn_tree_int.mzn  fzn_value_precede_int.mzn  redefinitions-2.0.mzn  redefinitions.mzn  value_precede_chain.mzn  value_precede_int.mzn
chuffed/flatzinc/mznlib/experimental/on_restart/: fzn_on_restart_complete.mzn  fzn_on_restart_last_val_bool.mzn  fzn_on_restart_last_val_int.mzn  fzn_on_restart_sol_bool.mzn  fzn_on_restart_sol_int.mzn  fzn_on_restart_status.mzn  fzn_on_restart_uniform_int.mzn
chuffed/globals/: EdExplFinder.cpp  EdExplFinder.h  alldiff.cpp  bool_arg_max.cpp  bounded_path.cpp  bounded_path.h  circuit.cpp  cumulative.cpp  cumulativeCalendar.cpp  dag.cpp  dag.h  dconnected.cpp  dconnected.h  directives.cpp  disjunctive.cpp  dtree.cpp  dtree.h  edit_distance.cpp  globals.h  graph.cpp  graph.h  lex.cpp  linear-bool-decomp.cpp  linear-bool.cpp  mddglobals.cpp  mddglobals.h  minimum.cpp  minimum_weight_tree.cpp  mst.cpp  regular.cpp  subcircuit.cpp  sym-break.cpp  table.cpp  template.cpp  tree.cpp  tree.h  value-precede.cpp  well-founded.cpp
chuffed/ldsb/: ldsb.cpp  ldsb.h
chuffed/mdd/: CFG.h  CYK.h  MDD.cpp  MDD.h  MurmurHash3.cpp  MurmurHash3.h  circ_fns.h  circutil.h  mdd_prop.cpp  mdd_prop.h  mdd_to_lgraph.cpp  mdd_to_lgraph.h  opcache.cpp  opcache.h  opts.h  sorters.h  weighted_dfa.cpp  weighted_dfa.h  wmdd_prop.cpp  wmdd_prop.h
chuffed/mip/: mip.cpp  mip.h  recalc.cpp  simplex.cpp  simplex.h
chuffed/mzn-models/: black-hole.mzn  concert-hall.mzn  mosp.mzn  mosp2.mzn  tsp.mzn
chuffed/parallel/: master.cpp  parallel.h  slave.cpp
chuffed/primitives/: arithmetic.cpp  binary.cpp  bool.cpp  domain.cpp  element.cpp  linear.cpp  primitives.h
chuffed/support/: BVec.h  ParseUtils.h  dijkstra.cpp  dijkstra.h  dynamic_kmeans.h  floyd_warshall.h  heap.h  kosaraju_scc.cpp  kosaraju_scc.h  lengauer_tarjan.cpp  lengauer_tarjan.h  misc.h  set_finder.h  sparse_set.h  trailed_cst_list.h  union_find.cpp  union_find.h  vec.h
chuffed/vars/: bool-view.cpp  bool-view.h  int-var-el.cpp  int-var-el.h  int-var-ll.cpp  int-var-ll.h  int-var-sl.cpp  int-var-sl.h  int-var.cpp  int-var.h  int-view.h  modelling.cpp  modelling.h  vars.h
